# sheets-finance-mcp

./: CLAUDE.md  README.md  SHEETSFINANCE_CATALOG.md  pyproject.toml
sheets_finance_mcp/: __init__.py  __main__.py  mcp_server.py  sf_catalog.py  sf_formula.py  sf_search.py
